# HYUPortalGradeCrawler

./: .gitignore  Readme.md  crawler.py  data_preprocess.py  main.py  pyproject.toml  requirements.txt  windowsCommand.bat  전체 학기별 성적.xlsx
